force-app/main/default/objects/Team_Fantasy__c/Team_Fantasy__c.object-meta.xml
<CustomObject>
    <label>Team Fantasy</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Team Fantasy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teams Fantasy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>