force-app/main/default/objects/Team_Fantasy__c/fields/Budget_Used__c.field-meta.xml
<CustomField>
    <fullName>Budget_Used__c</fullName>
    <label>Budget Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>