force-app/main/default/objects/Team_Fantasy__c/fields/Constructor_1__c.field-meta.xml
<CustomField>
    <fullName>Constructor_1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Constructor 1</label>
    <referenceTo>constructor__c</referenceTo>
    <relationshipLabel>Teams Fantasy</relationshipLabel>
    <relationshipName>Teams_Fantasy</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>