force-app/main/default/objects/Team_Fantasy__c/fields/Constructor_2__c.field-meta.xml
<CustomField>
    <fullName>Constructor_2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Constructor 2</label>
    <referenceTo>constructor__c</referenceTo>
    <relationshipLabel>Teams Fantasy (Constructor 2)</relationshipLabel>
    <relationshipName>Teams_Fantasy1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>