force-app/main/default/objects/Team_Fantasy__c/fields/Driver_1__c.field-meta.xml
<CustomField>
    <fullName>Driver_1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>First driver for team fantasy</description>
    <inlineHelpText>In this field is the first driver of team fantasy</inlineHelpText>
    <label>Driver 1</label>
    <referenceTo>driver__c</referenceTo>
    <relationshipLabel>Teams Fantasy</relationshipLabel>
    <relationshipName>Teams_Fantasy</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>