force-app/main/default/objects/Team_Fantasy__c/fields/Driver_2__c.field-meta.xml
<CustomField>
    <fullName>Driver_2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>second driver for team fantasy</description>
    <inlineHelpText>In this field is the second driver of team fantasy</inlineHelpText>
    <label>Driver 2</label>
    <referenceTo>driver__c</referenceTo>
    <relationshipLabel>Teams Fantasy (Driver 2)</relationshipLabel>
    <relationshipName>Teams_Fantasy1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>