force-app/main/default/objects/Team_Fantasy__c/fields/Driver_3__c.field-meta.xml
<CustomField>
    <fullName>Driver_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Third driver for team fantasy</description>
    <inlineHelpText>In this field is the third driver of team fantasy</inlineHelpText>
    <label>Driver 3</label>
    <referenceTo>driver__c</referenceTo>
    <relationshipLabel>Teams Fantasy (Driver 3)</relationshipLabel>
    <relationshipName>Teams_Fantasy2</relationshipName>
    <type>Lookup</type>
</CustomField>